fix footer alignment

--- a/wwwroot/css/sub - Copy.css
+++ b/wwwroot/css/sub - Copy.css
@@ -29,13 +29,13 @@ p {
 }
 
 /* GLOBAL STYLES */
-body {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-    background-color: black;
-    color: white;
-}
+    .body {
+        display: grid;
+        place-items: center;
+        height: 100vh;
+        background-color: black;
+        color: white;
+    }
 
 h2 {
     font-size: 2.25rem;
@@ -117,8 +117,6 @@ p {
 
    
 
-
-  
 
 @media (any-hover: hover) and (any-pointer: fine) {
     .card__content {
@@ -253,7 +251,7 @@ logos {
 
 /*RadioButtons - wine type*/
 .wine label {
-    left: 35px;
+    left: 37px;
 }
     .radio input[type="radio"]:checked + label, .radio-toolbar input[type="radio"]:checked + label {
     background-color:var(--button-color);
@@ -282,10 +280,10 @@ logos {
    font-family:var(--font-text);
 }
 .add{
-    
     border-style:groove;
     padding:10px 25px;
     margin:10px auto;
     border-radius:15px;
     font-family:var(--font-text);
+    
 }
